--- a/package.json
+++ b/package.json
@@ -7,12 +7,24 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/daroldso/react-native-comparison-table.git"
+  },
+  "keywords": [
+    "react-native",
+    "react-component",
+    "react-native-component",
+    "comparison-table",
+    "react-native-table",
+    "fixed-header"
+  ],
   "author": {
     "name": "Darold So",
-    "email": "daroldso@gmail.com",
-    "url": ""
+    "email": "daroldso@gmail.com"
   },
   "license": "MIT",
+  "homepage": "https://github.com/daroldso/react-native-comparison-table",
   "dependencies": {
     "lodash.get": "^4.4.2"
   },
